# agents-party

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  slack-app-manifest.yaml  tsconfig.json  vite.config.ts
.codex/: config.toml
.codex/agents/: pydantic-ai-builder.toml  repo-explorer.toml  web-researcher.toml
.codex/environments/: environment.toml
.github/workflows/: pages.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260330_0001_initial_postgres_schema.py  20260508_0002_salesforce_oauth_schema.py  20260508_0003_work_item_calendar_links.py
docs/: agent-model-routing.md  agent-routing-sequence.puml  agent-skills.md  architecture.puml  data-processing.md  message-history-model.md  oauth-typescript-integrations.md  osa-69-claude-design-prompt.md  postgres-typescript-migrations.md  provider-router.md  rss-feed-batch.md  salesforce-pdf-workflows.md  slack-typescript-ingress.md  soracom-integration.md  typescript-agent-runner.md  typescript-parity-validation.md
docs/adrs/: README.md
docs/agents/: task-management.md
docs/plans/: README.md  google-calendar-integration-plan.md  salesforce-authentication-plan.md  typescript-full-replacement-plan.md  work-management-google-calendar-plan.md
site/: index.html  vite.config.ts
site/assets/: styles.css
site/en/: index.html
site/pages/: architecture.html  quick-start.html  security.html
skills/airport-transfer-planner/: SKILL.md
skills/area-safety-and-convenience-checker/: SKILL.md
skills/budget-stay-optimizer/: SKILL.md
skills/dispatch-triage/: SKILL.md
src/: config.ts  main.ts  rssFeedWorker.ts  server.ts  worker.ts
tests/: config.test.ts  server.test.ts  test_config.py  test_main.py
(+365 files in other folders)
