[project]
name = "agents-party"
version = "0.1.0"
description = "Slack-based agent orchestration application by Leave a Nest Knowledge."
readme = "README.md"
authors = [
    { name = "Leave a Nest Knowledge", email = "info@k.lne.st" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-cloud-firestore>=2.25.0",
    "google-cloud-translate>=3.24.0",
    "pydantic-ai>=1.70.0",
    "pydantic-ai-skills>=0.5.1",
    "pydantic-settings>=2.13.1",
    "slack-bolt>=1.27.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
agents-party = "agents_party:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
